--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="">
 <head>
-  <meta charset="utf-8">
-  <title>App</title>
-  <base href="/">
+    <meta charset="utf-8">
+    <title>App</title>
+    <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root></app-root>
+<body style="overflow: scroll;">
+<app-root></app-root>
 </body>
 </html>
